# dictionary

./: .gitignore  CMakeLists.txt  README.md  makefile  test.txt  words.txt
src/: dictionary.cpp  dictionary.h  main.cpp  timer.cpp  timer.h  utility.h
